# pseolang

./: CMakeLists.txt  README.md  pseolang-config.cmake
examples/: !fiasko.txt  c-prog.pseo.txt  do-while-loop.pseo.txt  lamp.pseo.txt  math.pseo.txt  while-loop.pseo.txt
include/pseolang/: PseoRoot.hpp  representation.hpp
src/pseolang/: PseoRoot.cpp
src/pseolang/details/: stack-info.inl
